--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,7 +1,6 @@
 <H1>Easy Contract</H1>
 <div>
-  <button  routerLink="login" routerLinkActive="active" type="submit" (click)="onClick(true)">Entreprise</button>
-<button routerLink="login" routerLinkActive="active"type="submit" (click)="onClick(false)">Salarie</button>
+  <a routerLink="/entreprise/login"> <button routerLinkActive="active">Entreprise</button></a>
+
+  <button routerLink="/salarie" routerLinkActive="active">Salarie</button>
 </div>
-
-
