--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
       <input matInput placeholder="Password" formControlName="mdp">
-  
+
     </mat-form-field>
 
     <div class="button">
@@ -21,5 +21,7 @@
     </div>
 
    </form>
+   <span>Vous n'avez pas encore de compte?</span><br>
+   <a routerLink="/entreprise/register">Créer un compte ici</a>
 </div>
 
