--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,13 +28,13 @@
         <mat-icon>account_circle</mat-icon>Profil
       </a>
       <a mat-list-item routerLink="/overview/chat" routerLinkActive="active">
-        <mat-icon>chat</mat-icon>Chat
+        <mat-icon>chat</mat-icon>Gérer mes salariés
       </a>
       <a mat-list-item routerLink="/overview/contrat" routerLinkActive="active">
-        <mat-icon>folder_open</mat-icon>Directory
+        <mat-icon>folder_open</mat-icon>Gérer mes contrats
       </a>
       <a mat-list-item routerLink="/overview/creercontrat" routerLinkActive="active">
-        <mat-icon>person_search</mat-icon>Finder
+        <mat-icon>person_search</mat-icon>Genérer un contrat
       </a>
 
     </mat-nav-list>
