--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input matInput placeholder='email' formControlName="email">
-      <!-- <mat-icon matSuffix color="primary">local_post_office</mat-icon> -->
+       <mat-icon matSuffix color="primary">local_post_office</mat-icon>
     </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -24,4 +24,3 @@
    <span>Vous n'avez pas encore de compte?</span><br>
    <a routerLink="/entreprise/register">Créer un compte ici</a>
 </div>
-
