--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,6 +1,19 @@
 .profile
 {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.contain{
+  display: flex;
+  justify-content: start
+}
+.button{
+  display: flex;
+  justify-content:space-around;
+}
+input:disabled{
+  color:black;
 }
