--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,6 +1,28 @@
-<H1>Easy Contract</H1>
-<div>
-  <a routerLink="/entreprise/login"> <button routerLinkActive="active">Entreprise</button></a>
+<section>
 
-  <button routerLink="/salarie" routerLinkActive="active">Salarie</button>
-</div>
+  <div>
+    <p>
+      <mat-toolbar color="primary">
+        <mat-toolbar-row>
+        </mat-toolbar-row>
+      </mat-toolbar>
+    </p>
+  </div>
+
+  <div class="center">
+    <mat-card>
+      <mat-card-content>
+
+        <H1>Easy Contract</H1>
+        <div class="button">
+          <a routerLink="/entreprise/login"> <button routerLinkActive="active" >Entreprise</button></a>
+
+          <a routerLink="/salarie/login"><button routerLinkActive="active" >Salarie</button></a>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+  </div>
+  <div>
+
+  </div>
