--- a/src/app/components/login-salarie/login-salarie.component.html
+++ b/src/app/components/login-salarie/login-salarie.component.html
@@ -1,1 +1,39 @@
-<p>login-salarie works!</p>
+<section>
+<div>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Connexion Salarié</mat-card-title>
+
+          </mat-card-header>
+        <mat-card-content>
+
+            <form class="form" layout="column" [formGroup]="loginForm" (ngSubmit)="onSubmitConnexion()">
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder='email' formControlName="email">
+                    <mat-icon matSuffix color="primary">local_post_office</mat-icon>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Password</mat-label>
+                    <input matInput placeholder="Password" formControlName="mdp">
+
+                </mat-form-field>
+
+                <div class="button">
+                    <span>
+                        <button mat-raised-button [disabled]="loginForm.invalid" color="primary"
+                            type="submit">Valider</button>
+                    </span>
+                </div>
+
+            </form>
+            <span>Vous n'avez pas encore de compte?</span><br>
+            <a routerLink="/salarie/register">Créer un compte ici</a>
+
+
+        </mat-card-content>
+    </mat-card>
+</div>
+</section>
