--- a/src/app/components/header-salarie/header-salarie.component.html
+++ b/src/app/components/header-salarie/header-salarie.component.html
@@ -23,17 +23,12 @@
         <mat-nav-list>
 
             <a mat-list-item routerLink="/overview_s/profil" routerLinkActive="active" color="primary">
-                <mat-icon>account_circle</mat-icon>Profil
+                <mat-icon>account_circle</mat-icon>Mon profile
             </a>
             <a mat-list-item routerLink="/overview/chat" routerLinkActive="active">
-                <mat-icon>chat</mat-icon>Gérer mes salariés
+                <mat-icon>chat</mat-icon>Gérer mes contrats
             </a>
-            <a mat-list-item routerLink="/overview/contrat" routerLinkActive="active">
-                <mat-icon>folder_open</mat-icon>Gérer mes contrats
-            </a>
-            <a mat-list-item routerLink="/overview/creercontrat" routerLinkActive="active">
-                <mat-icon>person_search</mat-icon>Genérer un contrat
-            </a>
+
 
         </mat-nav-list>
     </mat-drawer>
