--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 
         <div class="form-container" layout="column">
-          <h1>Créer votre compte</h1>
+          <h1>Créer votre compte entreprise</h1>
           <form class="container" [formGroup]="registerForm" (ngSubmit)="onSubmit()" layout="column">
 
             <mat-form-field appearance="fill" class=" form-element">
