--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,11 @@
-<p>Connexion entreprise</p>
-<div>
+<div class="container">
+<section>
+  <mat-card>
+    <mat-card-header>
+        <mat-card-title>Connexion Entreprise</mat-card-title>
+
+      </mat-card-header>
+    <mat-card-content>
   <form class="form" layout="column" [formGroup]="loginForm" (ngSubmit)="onSubmitConnexion()">
 
     <mat-form-field appearance="outline">
@@ -23,4 +29,7 @@
    </form>
    <span>Vous n'avez pas encore de compte?</span><br>
    <a routerLink="/entreprise/register">Créer un compte ici</a>
+   </mat-card-content>
+   </mat-card>
+  </section>
 </div>
