--- a/src/app/components/profile-salarie/profile-salarie.component.html
+++ b/src/app/components/profile-salarie/profile-salarie.component.html
@@ -1,5 +1,5 @@
-<p>profile-salarie works!</p>
-<section class="profile" *ngIf="myProfil">
+
+<section class="profile" *ngIf="myProfil" >
 
     <div class="contain">
       <h1>Profile</h1>
@@ -111,12 +111,12 @@
       </div>
 
       <div class="contain">
-        <div>
+        <div *ngIf="myProfil[0].nom_jeune_fille">
           <mat-form-field appearance="outline" >
             <mat-label>
-              Siret
+              Nom de jeune fille
             </mat-label>
-            <input matInput [value]="myProfil[0].siret" disabled="disabled">
+            <input matInput [value]="myProfil[0].nom_jeune_fille" disabled="disabled">
           </mat-form-field>
 
         </div>
@@ -124,30 +124,34 @@
         <div>
           <mat-form-field appearance="outline" >
             <mat-label>
-              Raison sociale
+                N°securite sociale
             </mat-label>
-            <input matInput [value]="myProfil[0].raison_sociale" disabled="disabled">
+            <input matInput [value]="myProfil[0].num_ss" disabled="disabled">
           </mat-form-field>
-
-
         </div>
+
+
         <div>
           <mat-form-field appearance="outline" >
             <mat-label>
-              code_ape
+              Lieu de naissance
             </mat-label>
-
-            <input matInput [value]="myProfil[0].code_ape" disabled="disabled">
+            <input matInput [value]="myProfil[0].lieu_naissance" disabled="disabled">
           </mat-form-field>
-
         </div>
+
+
+      <div>
+        <mat-form-field appearance="outline" >
+          <mat-label>
+            Pays de naissance
+          </mat-label>
+          <input matInput [value]="myProfil[0].Pays_naissance_naissance" disabled="disabled">
+        </mat-form-field>
       </div>
 
-
-      <div class="button">
-
+    </div>
+     <div class="button">
         <button mat-raised-button color="primary" type="submit" (click)="openDialog()">Modifier</button>
-
       </div>
-
   </section>
