--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,12 +7,8 @@
 align-items: center;
    justify-content: center;
 }
-section{
-
-
-   width: 50%;
-   height: 50%;
-
+button{
+   width: 100%;
 }
 
 mat-card
