--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -14,6 +14,14 @@
   display: flex;
   justify-content:space-around;
 }
+
+mat-form-field{
+  width:200px;
+}
 input:disabled{
   color:black;
+
+}
+button{
+  width:200px;
 }
