--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -13,7 +13,7 @@
             Civilité
           </mat-label>
           <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil[0].civilite" disabled="disabled">
+          <input matInput [value]="myProfil.civilite" disabled="disabled">
         </mat-form-field>
 
 
@@ -25,7 +25,7 @@
             Nom
           </mat-label>
           <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil[0].nom" disabled="disabled">
+          <input matInput [value]="myProfil.nom" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -35,7 +35,7 @@
             Prénom
           </mat-label>
           <mat-icon matPrefix>person</mat-icon>
-          <input matInput [value]="myProfil[0].prenom" disabled="disabled">
+          <input matInput [value]="myProfil.prenom" disabled="disabled">
         </mat-form-field>
       </div>
     </div>
@@ -47,7 +47,7 @@
             Rue
           </mat-label>
 
-          <input matInput [value]=" myProfil[0].rue" disabled="disabled">
+          <input matInput [value]=" myProfil.rue" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -58,7 +58,7 @@
             Code postal
           </mat-label>
 
-          <input matInput [value]=" myProfil[0].cp" disabled="disabled">
+          <input matInput [value]=" myProfil.cp" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -68,7 +68,7 @@
             Ville
           </mat-label>
 
-          <input matInput [value]="myProfil[0].ville" disabled="disabled">
+          <input matInput [value]="myProfil.ville " disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -80,7 +80,7 @@
           <mat-label>
             Pays
           </mat-label>
-          <input matInput [value]="myProfil[0].pays" disabled="disabled">
+          <input matInput [value]="myProfil.pays" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -91,7 +91,7 @@
             Email
           </mat-label>
           <mat-icon matPrefix>local_post_office</mat-icon>
-          <input matInput [value]="myProfil[0].email" disabled="disabled">
+          <input matInput [value]="myProfil.email" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -101,7 +101,7 @@
             Téléphone
           </mat-label>
           <mat-icon matPrefix>phone</mat-icon>
-          <input matInput [value]="myProfil[0].telephone" disabled="disabled">
+          <input matInput [value]="myProfil.telephone" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -113,7 +113,7 @@
           <mat-label>
             Siret
           </mat-label>
-          <input matInput [value]="myProfil[0].siret" disabled="disabled">
+          <input matInput [value]="myProfil.siret" disabled="disabled">
         </mat-form-field>
       </div>
 
@@ -122,7 +122,7 @@
           <mat-label>
             Raison sociale
           </mat-label>
-          <input matInput [value]="myProfil[0].raison_sociale" disabled="disabled">
+          <input matInput [value]="myProfil.raison_sociale" disabled="disabled">
         </mat-form-field>
 
       </div>
@@ -132,7 +132,7 @@
             code_ape
           </mat-label>
 
-          <input matInput [value]="myProfil[0].code_ape" disabled="disabled">
+          <input matInput [value]="myProfil.code_ape" disabled="disabled">
         </mat-form-field>
 
       </div>
