--- a/src/app/components/contrat/contrat.component.scss
+++ b/src/app/components/contrat/contrat.component.scss
@@ -1,4 +1,10 @@
 .mat-mdc-radio-button ~ .mat-mdc-radio-button {
     margin-left: 16px;
-   
+
+
   }
+  mat-radio-button
+{
+    margin-left:12px;
+    margin-bottom:12px;
+}
