--- a/src/app/modals/contrat-modal/contrat-modal.component.html
+++ b/src/app/modals/contrat-modal/contrat-modal.component.html
@@ -1,2 +1,46 @@
-<p>contrat-modal works!</p>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
+        <script src="node_modules/jspdf/dist/jspdf.min.js"></script>
+        <title>Document</title>
+</head>
+
+<body>
+
+    <h1>Récapitulatif</h1>
+
+    <h2>salarie num :{{data.value.fki_salarie}}</h2>
+    <div class="salarie">
+        <div> {{salarieProfil.civilite}} {{salarieProfil.nom}} {{salarieProfil.prenom}} </div>
+        <div>{{salarieProfil.rue}} {{salarieProfil.cp}} {{salarieProfil.ville}} </div>
+
+
+
+    </div>
+    <ul>
+
+
+        <li>type contrat :<span>{{infos.type_contrat}}</span></li>
+        <li>Temps de travail :<span>{{infos.is_fulltime}}</span></li>
+        <li>Date debut :<span>{{infos.date_debut}}</span></li>
+        <li>Date fin :<span>{{infos.date_fin}}</span></li>
+        <li>Periode :<span>{{infos.periode_essai}}</span></li>
+        <li>Rémunération :<span>{{infos.remuneration}}</span></li>
+        <li>Motif :<span>{{infos.motif}}</span></li>
+        <li>Statut :<span>{{infos.statut}}</span></li>
+        <li>Fonction :<span>{{infos.fonction}}</span></li>
+
+    </ul>
+    <button mat-button color="primary" (click)="onClick()"> Créer le contrat</button>
+    <button mat-raised-button color="accent" type="submit" (click)="onCancel()">Annuler</button>
+
+</body>
+
+</html>
