--- a/src/app/modals/pdf/pdf.component.html
+++ b/src/app/modals/pdf/pdf.component.html
@@ -42,9 +42,9 @@
 
         <h3>Et le collaborateur</h3>
         <p>
-            {{data.nom_salarie}} {{data.prenom_salarie}} <br>
-            {{data.rue_salarie}} <br>
-            {{data.cp_salarie}} {{data.ville_salarie}} <br>
+            {{data.nom}} {{data.prenom}} <br>
+            {{data.rue}} <br>
+            {{data.cp}} {{data.ville}} <br>
             né(e) le : {{data.date_naissance | date: "dd/MM/yyyy"}} à {{data.lieu_naissance}} <br>
             Numéro SS : {{data.num_ss}}
         </p>
@@ -87,11 +87,11 @@
 </div>
         <div style="display:flex; align-items:center; justify-content:center">
             <button mat-raised-button color="primary" (click)="downloadPDF()" >Télécharger en format PDF</button>
-            <!-- <button mat-raised-button color="primary" (click)="downloadDOCX()">Télécharger en format DOCX</button> -->
-        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="node_modules/html2canvas/dist/html2canvas.min.js"></script>
     <script src="node_modules/jspdf/dist/jspdf.min.js"></script>
+    </div>
 </body>
 </html>
