--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 
 
 
+<div>
 
-<p>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
     <button mat-icon-button class="example-icon" (click)="opened=!opened">
@@ -15,7 +15,7 @@
     </button>
   </mat-toolbar-row>
   </mat-toolbar>
-</p>
+
 
 
 
@@ -44,3 +44,4 @@
     </section>
   </mat-drawer-content>
 </mat-drawer-container>
+</div>
