--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,35 +1,43 @@
+div{
+  width:100vw;
+  height:100vh;
+}
 .example-spacer {
   flex: 1 1 auto;
 }
 .container-fluid {
   // min-height: 100vh !important;
   overflow: hidden;
-  height: 100vh;
-  width: 100vw;
+
+
   margin: 0;
   padding: 0;
 
   .navbar {
 
-    width: 100vw;
+    width: 100%;
   }
 }
 
 .sidenav-container,
 .sidenav-container-finder {
-  height: 100%;
-  width: 100%;
+   height: 85%;
+   width: 100%;
   margin: 0 !important;
   padding: 0 !important;
   display: flex;
-
-
 }
 
-mat-sidenav {
-  width: 200px;
-}
+// }
 
-mat-sidenav-content {
-  width: 800px;
+// mat-sidenav {
+//   width: 200px;
+// }
+
+// mat-sidenav-content {
+//   width: 800px;
+// }
+.w-100{
+  width:100%;
+  height:100%;
 }
