--- a/src/app/components/mes-contrats/mes-contrats.component.html
+++ b/src/app/components/mes-contrats/mes-contrats.component.html
@@ -1,9 +1,11 @@
+<div  class="container">
+ <mat-slide-toggle [(ngModel)]="isChecked">Liste des : {{isChecked ? "contrats" : "contratsEncours"}}</mat-slide-toggle>
 <p>mes-contrats works!</p>
-<div *ngIf="contrats" >
+<div *ngIf="isChecked" >
     <mat-card class="example-card" *ngFor="let contrat of contrats">
         <mat-card-header>
           <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
-          <mat-card-subtitle>{{contrat.fonction}}</mat-card-subtitle>
+          <mat-card-subtitle>{{contrat.date_fin | date}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
           <p>This card indeterminates progress bar.</p>
@@ -11,8 +13,28 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>DETAIL</button>
-          <button mat-button>SHARE</button>
+          
         </mat-card-actions>
       </mat-card>
 
     </div>
+
+    <div *ngIf="!isChecked">
+        <mat-card class="example-card" *ngFor="let contrat of contratsEncours">
+            <mat-card-header>
+              <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
+              <mat-card-subtitle>{{contrat.date_fin | date}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>This card indeterminates progress bar.</p>
+              <p></p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>DETAIL</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+
+        </div>
+</div>
+
