--- a/src/app/components/mes-contrats/mes-contrats.component.html
+++ b/src/app/components/mes-contrats/mes-contrats.component.html
@@ -1,40 +1,42 @@
 <div  class="container">
- <mat-slide-toggle [(ngModel)]="isChecked">Liste des : {{isChecked ? "contrats" : "contratsEncours"}}</mat-slide-toggle>
-<p>mes-contrats works!</p>
-<div *ngIf="isChecked" >
-    <mat-card class="example-card" *ngFor="let contrat of contrats">
+<div>
+    <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Rechercher un contrat</mat-label>
+        <input matInput [formControl]="searchBar" maxlength="10" placeholder="Fonction ou Statut">
+      </mat-form-field>
+
+</div>
+
+ <mat-slide-toggle [(ngModel)]="isChecked">Liste des {{isChecked ? "contrats" : "contrats Encours"}}</mat-slide-toggle>
+
+<div  >
+    <mat-card class="example-card" *ngFor="let contrat of allContratFiltered">
         <mat-card-header>
-          <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
-          <mat-card-subtitle>{{contrat.date_fin | date}}</mat-card-subtitle>
+          <mat-card-title>{{contrat.nom}}</mat-card-title> <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
+          <mat-card-subtitle >Date Fin :{{contrat.date_fin | date}}</mat-card-subtitle>
+          <mat-card-subtitle >Statut :{{contrat.statut}}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
-          <p>This card indeterminates progress bar.</p>
-          <p></p>
-        </mat-card-content>
+
         <mat-card-actions>
           <button mat-button>DETAIL</button>
-          
+
         </mat-card-actions>
       </mat-card>
 
     </div>
 
     <div *ngIf="!isChecked">
-        <mat-card class="example-card" *ngFor="let contrat of contratsEncours">
+        <mat-card class="example-card" *ngFor="let contrat of allContratFiltered">
             <mat-card-header>
-              <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
-              <mat-card-subtitle>{{contrat.date_fin | date}}</mat-card-subtitle>
+              <mat-card-title>{{contrat.nom}}</mat-card-title> <mat-card-title>{{contrat.type_contrat}}</mat-card-title>
+              <mat-card-subtitle >Date Fin :{{contrat.date_fin | date}}</mat-card-subtitle>
+              <mat-card-subtitle >Statut :{{contrat.statut}}</mat-card-subtitle>
             </mat-card-header>
-            <mat-card-content>
-              <p>This card indeterminates progress bar.</p>
-              <p></p>
-            </mat-card-content>
+
             <mat-card-actions>
               <button mat-button>DETAIL</button>
-              <button mat-button>SHARE</button>
+
             </mat-card-actions>
           </mat-card>
-
-        </div>
 </div>
 
