--- a/src/app/components/mes-salaries/mes-salaries.component.html
+++ b/src/app/components/mes-salaries/mes-salaries.component.html
@@ -1,5 +1,12 @@
 <div *ngIf="salaries" >
-<mat-card class="example-card" *ngFor="let salarie of salaries">
+    <div>
+        <mat-form-field class="example-full-width" appearance="outline">
+            <mat-label>Rechercher un salarié</mat-label>
+            <input matInput [formControl]="searchBar" maxlength="10" placeholder="nom ou prénom">
+          </mat-form-field>
+
+    </div>
+<mat-card class="example-card" *ngFor="let salarie of allSalarieFiltered">
     <mat-card-header>
       <mat-card-title>{{salarie.nom}}</mat-card-title>
       <mat-card-subtitle>{{salarie.prenom}}</mat-card-subtitle>
